{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 255,
  "lineage": "780e2a91-e400-be9c-d0b3-00ef57903b21",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "DataTierNSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e8657681-5f64-4bab-81cf-237a597fcd11/resourceGroups/sela-week5-rg/providers/Microsoft.Network/networkSecurityGroups/sela-week5-DataTierNSG",
            "location": "westeurope",
            "name": "sela-week5-DataTierNSG",
            "resource_group_name": "sela-week5-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5432",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Port_5432",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.0.4",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "WebTierNSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e8657681-5f64-4bab-81cf-237a597fcd11/resourceGroups/sela-week5-rg/providers/Microsoft.Network/networkSecurityGroups/sela-week5-WebTierNSG",
            "location": "westeurope",
            "name": "sela-week5-WebTierNSG",
            "resource_group_name": "sela-week5-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Port_8080",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bastion-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "Zone-Redundant",
            "id": "/subscriptions/e8657681-5f64-4bab-81cf-237a597fcd11/resourceGroups/sela-week5-rg/providers/Microsoft.Network/publicIPAddresses/sela-week5-bastion-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.103.212.23",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "sela-week5-bastion-ip",
            "resource_group_name": "sela-week5-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastion-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e8657681-5f64-4bab-81cf-237a597fcd11/resourceGroups/sela-week5-rg/providers/Microsoft.Network/virtualNetworks/sela-week5-vnet/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "resource_group_name": "sela-week5-rg",
            "virtual_network_name": "sela-week5-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.vms.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vms",
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "availability_zone": "No-Zone",
                "id": "/subscriptions/e8657681-5f64-4bab-81cf-237a597fcd11/resourceGroups/sela-week5-rg/providers/Microsoft.Network/loadBalancers/sela-week5-loadbalancer/frontendIPConfigurations/sela-week5-lb-frontend-ip",
                "name": "sela-week5-lb-frontend-ip",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/e8657681-5f64-4bab-81cf-237a597fcd11/resourceGroups/sela-week5-rg/providers/Microsoft.Network/publicIPAddresses/PublicIPForLB"
              }
            ],
            "id": "/subscriptions/e8657681-5f64-4bab-81cf-237a597fcd11/resourceGroups/sela-week5-rg/providers/Microsoft.Network/loadBalancers/sela-week5-loadbalancer",
            "location": "westeurope",
            "name": "sela-week5-loadbalancer",
            "resource_group_name": "sela-week5-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.vms.azurerm_public_ip.pip"
          ]
        }
      ]
    },
    {
      "module": "module.vms",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "lb-backend-address-pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e8657681-5f64-4bab-81cf-237a597fcd11/resourceGroups/sela-week5-rg/providers/Microsoft.Network/loadBalancers/sela-week5-loadbalancer/backendAddressPools/BackEndAddressPool",
            "loadbalancer_id": "/subscriptions/e8657681-5f64-4bab-81cf-237a597fcd11/resourceGroups/sela-week5-rg/providers/Microsoft.Network/loadBalancers/sela-week5-loadbalancer",
            "name": "BackEndAddressPool",
            "resource_group_name": "sela-week5-rg"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.vms.azurerm_lb.lb",
            "module.vms.azurerm_public_ip.pip"
          ]
        }
      ]
    },
    {
      "module": "module.vms",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool_address",
      "name": "add-pool-add",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/e8657681-5f64-4bab-81cf-237a597fcd11/resourceGroups/sela-week5-rg/providers/Microsoft.Network/loadBalancers/sela-week5-loadbalancer/backendAddressPools/BackEndAddressPool",
            "id": "/subscriptions/e8657681-5f64-4bab-81cf-237a597fcd11/resourceGroups/sela-week5-rg/providers/Microsoft.Network/loadBalancers/sela-week5-loadbalancer/backendAddressPools/BackEndAddressPool/addresses/sela-week5-webserver-0",
            "ip_address": "10.0.0.6",
            "name": "sela-week5-webserver-0",
            "virtual_network_id": "/subscriptions/e8657681-5f64-4bab-81cf-237a597fcd11/resourceGroups/sela-week5-rg/providers/Microsoft.Network/virtualNetworks/sela-week5-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.vms.azurerm_lb.lb",
            "module.vms.azurerm_lb_backend_address_pool.lb-backend-address-pool",
            "module.vms.azurerm_network_interface.main",
            "module.vms.azurerm_public_ip.pip",
            "module.vms.azurerm_subnet.public-subnet",
            "module.vms.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/e8657681-5f64-4bab-81cf-237a597fcd11/resourceGroups/sela-week5-rg/providers/Microsoft.Network/loadBalancers/sela-week5-loadbalancer/backendAddressPools/BackEndAddressPool",
            "id": "/subscriptions/e8657681-5f64-4bab-81cf-237a597fcd11/resourceGroups/sela-week5-rg/providers/Microsoft.Network/loadBalancers/sela-week5-loadbalancer/backendAddressPools/BackEndAddressPool/addresses/sela-week5-webserver-1",
            "ip_address": "10.0.0.5",
            "name": "sela-week5-webserver-1",
            "virtual_network_id": "/subscriptions/e8657681-5f64-4bab-81cf-237a597fcd11/resourceGroups/sela-week5-rg/providers/Microsoft.Network/virtualNetworks/sela-week5-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.vms.azurerm_lb.lb",
            "module.vms.azurerm_lb_backend_address_pool.lb-backend-address-pool",
            "module.vms.azurerm_network_interface.main",
            "module.vms.azurerm_public_ip.pip",
            "module.vms.azurerm_subnet.public-subnet",
            "module.vms.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/e8657681-5f64-4bab-81cf-237a597fcd11/resourceGroups/sela-week5-rg/providers/Microsoft.Network/loadBalancers/sela-week5-loadbalancer/backendAddressPools/BackEndAddressPool",
            "id": "/subscriptions/e8657681-5f64-4bab-81cf-237a597fcd11/resourceGroups/sela-week5-rg/providers/Microsoft.Network/loadBalancers/sela-week5-loadbalancer/backendAddressPools/BackEndAddressPool/addresses/sela-week5-webserver-2",
            "ip_address": "10.0.0.4",
            "name": "sela-week5-webserver-2",
            "virtual_network_id": "/subscriptions/e8657681-5f64-4bab-81cf-237a597fcd11/resourceGroups/sela-week5-rg/providers/Microsoft.Network/virtualNetworks/sela-week5-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.vms.azurerm_lb.lb",
            "module.vms.azurerm_lb_backend_address_pool.lb-backend-address-pool",
            "module.vms.azurerm_network_interface.main",
            "module.vms.azurerm_public_ip.pip",
            "module.vms.azurerm_subnet.public-subnet",
            "module.vms.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vms",
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "lb-probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e8657681-5f64-4bab-81cf-237a597fcd11/resourceGroups/sela-week5-rg/providers/Microsoft.Network/loadBalancers/sela-week5-loadbalancer/probes/http-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/e8657681-5f64-4bab-81cf-237a597fcd11/resourceGroups/sela-week5-rg/providers/Microsoft.Network/loadBalancers/sela-week5-loadbalancer",
            "name": "http-probe",
            "number_of_probes": 2,
            "port": 8080,
            "protocol": "Http",
            "request_path": "/",
            "resource_group_name": "sela-week5-rg"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.vms.azurerm_lb.lb",
            "module.vms.azurerm_public_ip.pip"
          ]
        }
      ]
    },
    {
      "module": "module.vms",
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "lb-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/e8657681-5f64-4bab-81cf-237a597fcd11/resourceGroups/sela-week5-rg/providers/Microsoft.Network/loadBalancers/sela-week5-loadbalancer/backendAddressPools/BackEndAddressPool",
            "backend_address_pool_ids": [
              "/subscriptions/e8657681-5f64-4bab-81cf-237a597fcd11/resourceGroups/sela-week5-rg/providers/Microsoft.Network/loadBalancers/sela-week5-loadbalancer/backendAddressPools/BackEndAddressPool"
            ],
            "backend_port": 8080,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/e8657681-5f64-4bab-81cf-237a597fcd11/resourceGroups/sela-week5-rg/providers/Microsoft.Network/loadBalancers/sela-week5-loadbalancer/frontendIPConfigurations/sela-week5-lb-frontend-ip",
            "frontend_ip_configuration_name": "sela-week5-lb-frontend-ip",
            "frontend_port": 8080,
            "id": "/subscriptions/e8657681-5f64-4bab-81cf-237a597fcd11/resourceGroups/sela-week5-rg/providers/Microsoft.Network/loadBalancers/sela-week5-loadbalancer/loadBalancingRules/LBRule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/e8657681-5f64-4bab-81cf-237a597fcd11/resourceGroups/sela-week5-rg/providers/Microsoft.Network/loadBalancers/sela-week5-loadbalancer",
            "name": "LBRule",
            "probe_id": "/subscriptions/e8657681-5f64-4bab-81cf-237a597fcd11/resourceGroups/sela-week5-rg/providers/Microsoft.Network/loadBalancers/sela-week5-loadbalancer/probes/http-probe",
            "protocol": "Tcp",
            "resource_group_name": "sela-week5-rg"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.vms.azurerm_lb.lb",
            "module.vms.azurerm_lb_backend_address_pool.lb-backend-address-pool",
            "module.vms.azurerm_lb_probe.lb-probe",
            "module.vms.azurerm_public_ip.pip"
          ]
        }
      ]
    },
    {
      "module": "module.vms",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e8657681-5f64-4bab-81cf-237a597fcd11/resourceGroups/sela-week5-rg/providers/Microsoft.Network/networkInterfaces/sela-week5-0",
            "internal_domain_name_suffix": "jxzxojwjchqexpcfjs3d5qfmph.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "testconfiguration1",
                "primary": true,
                "private_ip_address": "10.0.0.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/e8657681-5f64-4bab-81cf-237a597fcd11/resourceGroups/sela-week5-rg/providers/Microsoft.Network/virtualNetworks/sela-week5-vnet/subnets/sela-week5-public-subnet"
              }
            ],
            "location": "westeurope",
            "name": "sela-week5-0",
            "private_ip_address": "10.0.0.6",
            "private_ip_addresses": [
              "10.0.0.6"
            ],
            "resource_group_name": "sela-week5-rg"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.vms.azurerm_subnet.public-subnet",
            "module.vms.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e8657681-5f64-4bab-81cf-237a597fcd11/resourceGroups/sela-week5-rg/providers/Microsoft.Network/networkInterfaces/sela-week5-1",
            "internal_domain_name_suffix": "jxzxojwjchqexpcfjs3d5qfmph.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "testconfiguration1",
                "primary": true,
                "private_ip_address": "10.0.0.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/e8657681-5f64-4bab-81cf-237a597fcd11/resourceGroups/sela-week5-rg/providers/Microsoft.Network/virtualNetworks/sela-week5-vnet/subnets/sela-week5-public-subnet"
              }
            ],
            "location": "westeurope",
            "name": "sela-week5-1",
            "private_ip_address": "10.0.0.5",
            "private_ip_addresses": [
              "10.0.0.5"
            ],
            "resource_group_name": "sela-week5-rg"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.vms.azurerm_subnet.public-subnet",
            "module.vms.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e8657681-5f64-4bab-81cf-237a597fcd11/resourceGroups/sela-week5-rg/providers/Microsoft.Network/networkInterfaces/sela-week5-2",
            "internal_domain_name_suffix": "jxzxojwjchqexpcfjs3d5qfmph.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "testconfiguration1",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/e8657681-5f64-4bab-81cf-237a597fcd11/resourceGroups/sela-week5-rg/providers/Microsoft.Network/virtualNetworks/sela-week5-vnet/subnets/sela-week5-public-subnet"
              }
            ],
            "location": "westeurope",
            "name": "sela-week5-2",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "sela-week5-rg"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.vms.azurerm_subnet.public-subnet",
            "module.vms.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vms",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "Zone-Redundant",
            "id": "/subscriptions/e8657681-5f64-4bab-81cf-237a597fcd11/resourceGroups/sela-week5-rg/providers/Microsoft.Network/publicIPAddresses/PublicIPForLB",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.103.212.70",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "PublicIPForLB",
            "resource_group_name": "sela-week5-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.vms",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "delegation": [
              {
                "name": "fs",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action"
                    ],
                    "name": "Microsoft.DBforPostgreSQL/flexibleServers"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e8657681-5f64-4bab-81cf-237a597fcd11/resourceGroups/sela-week5-rg/providers/Microsoft.Network/virtualNetworks/sela-week5-vnet/subnets/sela-week5-private-subnet",
            "name": "sela-week5-private-subnet",
            "resource_group_name": "sela-week5-rg",
            "virtual_network_name": "sela-week5-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.vms.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vms",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/24",
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e8657681-5f64-4bab-81cf-237a597fcd11/resourceGroups/sela-week5-rg/providers/Microsoft.Network/virtualNetworks/sela-week5-vnet/subnets/sela-week5-public-subnet",
            "name": "sela-week5-public-subnet",
            "resource_group_name": "sela-week5-rg",
            "virtual_network_name": "sela-week5-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.vms.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vms",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "private-nsg-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e8657681-5f64-4bab-81cf-237a597fcd11/resourceGroups/sela-week5-rg/providers/Microsoft.Network/virtualNetworks/sela-week5-vnet/subnets/sela-week5-private-subnet",
            "network_security_group_id": "/subscriptions/e8657681-5f64-4bab-81cf-237a597fcd11/resourceGroups/sela-week5-rg/providers/Microsoft.Network/networkSecurityGroups/sela-week5-DataTierNSG",
            "subnet_id": "/subscriptions/e8657681-5f64-4bab-81cf-237a597fcd11/resourceGroups/sela-week5-rg/providers/Microsoft.Network/virtualNetworks/sela-week5-vnet/subnets/sela-week5-private-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.DataTierNSG",
            "azurerm_resource_group.rg",
            "module.vms.azurerm_subnet.private-subnet",
            "module.vms.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vms",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "public-nsg-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e8657681-5f64-4bab-81cf-237a597fcd11/resourceGroups/sela-week5-rg/providers/Microsoft.Network/virtualNetworks/sela-week5-vnet/subnets/sela-week5-public-subnet",
            "network_security_group_id": "/subscriptions/e8657681-5f64-4bab-81cf-237a597fcd11/resourceGroups/sela-week5-rg/providers/Microsoft.Network/networkSecurityGroups/sela-week5-WebTierNSG",
            "subnet_id": "/subscriptions/e8657681-5f64-4bab-81cf-237a597fcd11/resourceGroups/sela-week5-rg/providers/Microsoft.Network/virtualNetworks/sela-week5-vnet/subnets/sela-week5-public-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.WebTierNSG",
            "azurerm_resource_group.rg",
            "module.vms.azurerm_subnet.public-subnet",
            "module.vms.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vms",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "2677f34d-11c9-4be0-bc45-4cba3fc0ac7f",
            "id": "/subscriptions/e8657681-5f64-4bab-81cf-237a597fcd11/resourceGroups/sela-week5-rg/providers/Microsoft.Network/virtualNetworks/sela-week5-vnet",
            "location": "westeurope",
            "name": "sela-week5-vnet",
            "resource_group_name": "sela-week5-rg",
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}